--- a/src/MVHub/ExportHistoryDialog.ui
+++ b/src/MVHub/ExportHistoryDialog.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>970</width>
-    <height>704</height>
+    <width>1100</width>
+    <height>500</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>1100</width>
+    <height>500</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Export history</string>
@@ -65,7 +71,7 @@
      <item row="0" column="2">
       <spacer name="horizontalSpacer">
        <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+        <enum>Qt::Orientation::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
