GSvar RE dialog: added STRchive links (from NGSD)

--- a/src/GSvar/GSvar.qrc
+++ b/src/GSvar/GSvar.qrc
@@ -129,5 +129,6 @@
         <file>Icons/ProteinAtlas.png</file>
         <file>Icons/Icon.icns</file>
         <file>Icons/Methylation.png</file>
+        <file>Icons/strchive.png</file>
     </qresource>
 </RCC>
