MVHub: removed last excluded PS

--- a/src/MVHub/MVHub.ui
+++ b/src/MVHub/MVHub.ui
@@ -339,7 +339,7 @@
          </size>
         </property>
         <property name="text">
-         <string>DNA2502191A1_01 DNA2504127A1_01</string>
+         <string/>
         </property>
        </widget>
       </item>
