--- a/src/GSvar/ProcessedSampleDataDeletionDialog.ui
+++ b/src/GSvar/ProcessedSampleDataDeletionDialog.ui
@@ -82,28 +82,28 @@
        </property>
       </widget>
      </item>
-     <item row="8" column="0">
+     <item row="9" column="0">
       <widget class="QLabel" name="label_6">
        <property name="text">
         <string>Diagnostic data:</string>
        </property>
       </widget>
      </item>
-     <item row="8" column="1">
+     <item row="9" column="1">
       <widget class="QCheckBox" name="kasp">
        <property name="text">
         <string>KASP</string>
        </property>
       </widget>
      </item>
-     <item row="9" column="1">
+     <item row="10" column="1">
       <widget class="QCheckBox" name="diag_status">
        <property name="text">
         <string>diagnostic status</string>
        </property>
       </widget>
      </item>
-     <item row="10" column="1">
+     <item row="11" column="1">
       <widget class="QCheckBox" name="report_config">
        <property name="toolTip">
         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Deletes report configuration, evaluation sheet and gap data.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -113,21 +113,21 @@
        </property>
       </widget>
      </item>
-     <item row="13" column="0">
+     <item row="14" column="0">
       <widget class="QLabel" name="label_5">
        <property name="text">
         <string>Sample:</string>
        </property>
       </widget>
      </item>
-     <item row="13" column="1">
+     <item row="14" column="1">
       <widget class="QCheckBox" name="processed_sample">
        <property name="text">
         <string>Processed sample (works only if all associated data is deleted)</string>
        </property>
       </widget>
      </item>
-     <item row="11" column="1">
+     <item row="12" column="1">
       <widget class="QCheckBox" name="somatic_report_config">
        <property name="enabled">
         <bool>false</bool>
@@ -187,17 +187,27 @@
        </property>
       </widget>
      </item>
-     <item row="12" column="1">
+     <item row="13" column="1">
       <widget class="QCheckBox" name="qc_data">
        <property name="text">
         <string>QC data</string>
        </property>
       </widget>
      </item>
-     <item row="12" column="0">
+     <item row="13" column="0">
       <widget class="QLabel" name="label_4">
        <property name="text">
         <string>other:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="8" column="1">
+      <widget class="QCheckBox" name="somatic_var_sv">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="text">
+        <string>somatic SVs</string>
        </property>
       </widget>
      </item>
@@ -211,7 +221,7 @@
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+        <enum>Qt::Orientation::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
