GSvarc: Increased number of samples that can be highlighted in QC plots

--- a/src/GSvar/DBQCWidget.ui
+++ b/src/GSvar/DBQCWidget.ui
@@ -194,7 +194,7 @@
          <normaloff>:/Icons/Import.png</normaloff>:/Icons/Import.png</iconset>
        </property>
        <property name="popupMode">
-        <enum>QToolButton::InstantPopup</enum>
+        <enum>QToolButton::ToolButtonPopupMode::InstantPopup</enum>
        </property>
       </widget>
      </item>
@@ -222,6 +222,9 @@
      </item>
      <item row="12" column="1">
       <widget class="QLineEdit" name="highlight">
+       <property name="maxLength">
+        <number>999999</number>
+       </property>
        <property name="clearButtonEnabled">
         <bool>false</bool>
        </property>
@@ -242,10 +245,10 @@
    <item>
     <spacer name="verticalSpacer">
      <property name="orientation">
-      <enum>Qt::Vertical</enum>
+      <enum>Qt::Orientation::Vertical</enum>
      </property>
      <property name="sizeType">
-      <enum>QSizePolicy::Fixed</enum>
+      <enum>QSizePolicy::Policy::Fixed</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
@@ -377,7 +380,7 @@
          </size>
         </property>
         <property name="contextMenuPolicy">
-         <enum>Qt::DefaultContextMenu</enum>
+         <enum>Qt::ContextMenuPolicy::DefaultContextMenu</enum>
         </property>
        </widget>
       </item>
@@ -398,7 +401,7 @@
       <item row="3" column="1">
        <spacer name="verticalSpacer_3">
         <property name="orientation">
-         <enum>Qt::Vertical</enum>
+         <enum>Qt::Orientation::Vertical</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
@@ -411,10 +414,10 @@
       <item row="1" column="1">
        <spacer name="verticalSpacer_4">
         <property name="orientation">
-         <enum>Qt::Vertical</enum>
+         <enum>Qt::Orientation::Vertical</enum>
         </property>
         <property name="sizeType">
-         <enum>QSizePolicy::Fixed</enum>
+         <enum>QSizePolicy::Policy::Fixed</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
