--- a/src/GSvar/ProcessedSampleWidget.ui
+++ b/src/GSvar/ProcessedSampleWidget.ui
@@ -154,6 +154,26 @@
           </widget>
          </item>
          <item>
+          <widget class="QToolButton" name="circos_btn">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
+           <property name="toolTip">
+            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Show circos plot&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+           </property>
+           <property name="text">
+            <string>...</string>
+           </property>
+           <property name="icon">
+            <iconset resource="GSvar.qrc">
+             <normaloff>:/Icons/Circos.png</normaloff>:/Icons/Circos.png</iconset>
+           </property>
+           <property name="popupMode">
+            <enum>QToolButton::ToolButtonPopupMode::InstantPopup</enum>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QToolButton" name="rna_btn">
            <property name="enabled">
             <bool>false</bool>
