--- a/src/GSvar/SomaticVariantInterpreterWidget.ui
+++ b/src/GSvar/SomaticVariantInterpreterWidget.ui
@@ -7,23 +7,38 @@
     <x>0</x>
     <y>0</y>
     <width>750</width>
-    <height>633</height>
+    <height>750</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>750</width>
-    <height>633</height>
+    <height>750</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>Somatic Variant Interpretation</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <property name="leftMargin">
+    <number>3</number>
+   </property>
+   <property name="topMargin">
+    <number>3</number>
+   </property>
+   <property name="rightMargin">
+    <number>3</number>
+   </property>
+   <property name="bottomMargin">
+    <number>3</number>
+   </property>
+   <property name="spacing">
+    <number>3</number>
+   </property>
    <item row="1" column="1">
     <layout class="QVBoxLayout" name="verticalLayout">
      <property name="spacing">
-      <number>6</number>
+      <number>3</number>
      </property>
      <property name="leftMargin">
       <number>3</number>
@@ -40,7 +55,7 @@
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,1">
        <property name="spacing">
-        <number>6</number>
+        <number>3</number>
        </property>
        <property name="leftMargin">
         <number>3</number>
@@ -58,7 +73,6 @@
         <widget class="QLabel" name="label_3">
          <property name="font">
           <font>
-           <weight>75</weight>
            <bold>true</bold>
           </font>
          </property>
@@ -90,17 +104,13 @@
        <property name="bottomMargin">
         <number>3</number>
        </property>
-       <property name="horizontalSpacing">
+       <property name="spacing">
         <number>3</number>
-       </property>
-       <property name="verticalSpacing">
-        <number>6</number>
        </property>
        <item row="0" column="0">
         <widget class="QLabel" name="label_22">
          <property name="font">
           <font>
-           <weight>75</weight>
            <bold>true</bold>
           </font>
          </property>
@@ -115,7 +125,7 @@
           <string/>
          </property>
          <property name="textInteractionFlags">
-          <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+          <set>Qt::TextInteractionFlag::LinksAccessibleByMouse|Qt::TextInteractionFlag::TextSelectableByKeyboard|Qt::TextInteractionFlag::TextSelectableByMouse</set>
          </property>
         </widget>
        </item>
@@ -132,7 +142,7 @@
           <string/>
          </property>
          <property name="textInteractionFlags">
-          <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+          <set>Qt::TextInteractionFlag::LinksAccessibleByMouse|Qt::TextInteractionFlag::TextSelectableByKeyboard|Qt::TextInteractionFlag::TextSelectableByMouse</set>
          </property>
         </widget>
        </item>
@@ -149,7 +159,7 @@
           <string/>
          </property>
          <property name="textInteractionFlags">
-          <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+          <set>Qt::TextInteractionFlag::LinksAccessibleByMouse|Qt::TextInteractionFlag::TextSelectableByKeyboard|Qt::TextInteractionFlag::TextSelectableByMouse</set>
          </property>
         </widget>
        </item>
@@ -166,7 +176,7 @@
           <string/>
          </property>
          <property name="textInteractionFlags">
-          <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+          <set>Qt::TextInteractionFlag::LinksAccessibleByMouse|Qt::TextInteractionFlag::TextSelectableByKeyboard|Qt::TextInteractionFlag::TextSelectableByMouse</set>
          </property>
         </widget>
        </item>
@@ -183,7 +193,7 @@
           <string/>
          </property>
          <property name="textInteractionFlags">
-          <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+          <set>Qt::TextInteractionFlag::LinksAccessibleByMouse|Qt::TextInteractionFlag::TextSelectableByKeyboard|Qt::TextInteractionFlag::TextSelectableByMouse</set>
          </property>
         </widget>
        </item>
@@ -200,7 +210,7 @@
           <string/>
          </property>
          <property name="textInteractionFlags">
-          <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+          <set>Qt::TextInteractionFlag::LinksAccessibleByMouse|Qt::TextInteractionFlag::TextSelectableByKeyboard|Qt::TextInteractionFlag::TextSelectableByMouse</set>
          </property>
         </widget>
        </item>
@@ -209,7 +219,7 @@
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_22">
        <property name="spacing">
-        <number>6</number>
+        <number>3</number>
        </property>
        <property name="leftMargin">
         <number>3</number>
@@ -235,7 +245,7 @@
      <item>
       <spacer name="verticalSpacer">
        <property name="orientation">
-        <enum>Qt::Vertical</enum>
+        <enum>Qt::Orientation::Vertical</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
@@ -249,6 +259,9 @@
    </item>
    <item row="2" column="0" colspan="2">
     <layout class="QHBoxLayout" name="horizontalLayout_21">
+     <property name="spacing">
+      <number>3</number>
+     </property>
      <item>
       <widget class="QPushButton" name="button_select_from_input_anno">
        <property name="toolTip">
@@ -270,6 +283,13 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="button_delete_from_ngsd">
+       <property name="text">
+        <string>delete from NGSD</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="button_store_in_ngsd">
        <property name="text">
         <string>store in NGSD</string>
@@ -287,6 +307,9 @@
    </item>
    <item row="1" column="0">
     <layout class="QVBoxLayout" name="verticalLayout_2">
+     <property name="spacing">
+      <number>3</number>
+     </property>
      <property name="leftMargin">
       <number>3</number>
      </property>
@@ -303,7 +326,6 @@
       <widget class="QLabel" name="label">
        <property name="font">
         <font>
-         <weight>75</weight>
          <bold>true</bold>
         </font>
        </property>
@@ -315,7 +337,7 @@
      <item>
       <widget class="Line" name="line_7">
        <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+        <enum>Qt::Orientation::Horizontal</enum>
        </property>
       </widget>
      </item>
@@ -369,7 +391,7 @@
      <item>
       <widget class="Line" name="line">
        <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+        <enum>Qt::Orientation::Horizontal</enum>
        </property>
       </widget>
      </item>
@@ -517,7 +539,7 @@
      <item>
       <widget class="Line" name="line_2">
        <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+        <enum>Qt::Orientation::Horizontal</enum>
        </property>
       </widget>
      </item>
@@ -759,7 +781,7 @@
      <item>
       <widget class="Line" name="line_3">
        <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+        <enum>Qt::Orientation::Horizontal</enum>
        </property>
       </widget>
      </item>
@@ -907,7 +929,7 @@
      <item>
       <widget class="Line" name="line_5">
        <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+        <enum>Qt::Orientation::Horizontal</enum>
        </property>
       </widget>
      </item>
@@ -915,7 +937,6 @@
       <widget class="QLabel" name="label_2">
        <property name="font">
         <font>
-         <weight>75</weight>
          <bold>true</bold>
         </font>
        </property>
@@ -927,7 +948,7 @@
      <item>
       <widget class="Line" name="line_8">
        <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+        <enum>Qt::Orientation::Horizontal</enum>
        </property>
       </widget>
      </item>
@@ -981,7 +1002,7 @@
      <item>
       <widget class="Line" name="line_4">
        <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+        <enum>Qt::Orientation::Horizontal</enum>
        </property>
       </widget>
      </item>
@@ -1082,7 +1103,7 @@
      <item>
       <widget class="Line" name="line_9">
        <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+        <enum>Qt::Orientation::Horizontal</enum>
        </property>
       </widget>
      </item>
@@ -1183,7 +1204,7 @@
      <item>
       <widget class="Line" name="line_6">
        <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+        <enum>Qt::Orientation::Horizontal</enum>
        </property>
       </widget>
      </item>
@@ -1191,7 +1212,6 @@
       <widget class="QLabel" name="label_28">
        <property name="font">
         <font>
-         <weight>75</weight>
          <bold>true</bold>
         </font>
        </property>
@@ -1202,19 +1222,6 @@
      </item>
      <item>
       <widget class="QTextEdit" name="comment"/>
-     </item>
-     <item>
-      <spacer name="verticalSpacer_2">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
      </item>
     </layout>
    </item>
@@ -1245,7 +1252,6 @@
        </property>
        <property name="font">
         <font>
-         <weight>75</weight>
          <bold>true</bold>
         </font>
        </property>
@@ -1266,7 +1272,7 @@
         <string/>
        </property>
        <property name="textInteractionFlags">
-        <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+        <set>Qt::TextInteractionFlag::LinksAccessibleByMouse|Qt::TextInteractionFlag::TextSelectableByKeyboard|Qt::TextInteractionFlag::TextSelectableByMouse</set>
        </property>
       </widget>
      </item>
@@ -1277,22 +1283,22 @@
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="onco_protein_length_change"/>
-  <buttongroup name="benign_synonymous_mutation"/>
+  <buttongroup name="onco_strong_cancerhotspot"/>
+  <buttongroup name="benign_high_maf"/>
+  <buttongroup name="onco_mutation_in_gene_with_etiology"/>
   <buttongroup name="onco_other_aa_known_oncogenic"/>
+  <buttongroup name="benign_benign_computational_evidence"/>
+  <buttongroup name="benign_synonymous_mutation"/>
+  <buttongroup name="benign_very_high_maf"/>
+  <buttongroup name="onco_null_mutation_in_tsg"/>
+  <buttongroup name="onco_oncogenic_functional_studies"/>
+  <buttongroup name="onco_weak_cancerhotspot"/>
+  <buttongroup name="benign_benign_functional_studies"/>
+  <buttongroup name="onco_absent_from_controls"/>
   <buttongroup name="onco_very_weak_cancerhotspot"/>
   <buttongroup name="onco_located_in_canerhotspot"/>
-  <buttongroup name="onco_computational_evidence"/>
-  <buttongroup name="onco_weak_cancerhotspot"/>
-  <buttongroup name="onco_oncogenic_functional_studies"/>
-  <buttongroup name="onco_strong_cancerhotspot"/>
-  <buttongroup name="onco_absent_from_controls"/>
-  <buttongroup name="benign_very_high_maf"/>
-  <buttongroup name="benign_benign_computational_evidence"/>
-  <buttongroup name="benign_high_maf"/>
-  <buttongroup name="onco_null_mutation_in_tsg"/>
   <buttongroup name="onco_known_oncogenic_aa"/>
-  <buttongroup name="onco_mutation_in_gene_with_etiology"/>
-  <buttongroup name="benign_benign_functional_studies"/>
+  <buttongroup name="onco_computational_evidence"/>
+  <buttongroup name="onco_protein_length_change"/>
  </buttongroups>
 </ui>
